# gdgu_robot

gdgu_robot/: CMakeLists.txt  package.xml  setup.cfg  setup.py
gdgu_robot/config/: gz_bridge.yaml
gdgu_robot/launch/: gazebo_spawn.launch.py  spawn.launch.py
gdgu_robot/meshes/: fixed_wheel.STL
gdgu_robot/resource/: camera.xacro  gazebo_control.xacro  gdgu_hardware.xacro  gdgu_robot.sdf  gdgu_robot.urdf.xacro  robot.urdf  robot.xacro  robot_body.xacro  robot_hardware.sdf  robot_hardware.urdf  robot_hardware.urdf.xacro  robot_inertia.xacro  ultrasonic.xacro
gdgu_robot/rviz/: gdgu_robot.rviz
gdgu_robot/world/: obstacles.sdf
gdgu_robot/world/robot_model/meshes/: chassis.STL  fixed wheel.STL
motors/: package.xml  setup.py
motors/launch/: hardware.launch.py  keyboard.launch.py  motor_teleop.launch.py
motors/motors/: motor_control.py  motor_driver.py  motor_driver_ros_interface.py  motor_test.py  rhino_params.py
