<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gdgu_robot</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="aayush.vats@gdgu.org">aayush</maintainer>
  <license>TODO: License declaration</license>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rclcpp</depend>
  <depend>ros_gz_image</depend>
  <depend>ros_gz_sim</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>ros_ign_bridge</depend>
  <depend>ros_ign_image</depend> <!-- Include if you work with image transport -->
  <depend>ros_ign_gazebo</depend> 
  <exec_depend>ign_ros2_control</exec_depend> 
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <exec_depend>rclpy</exec_depend>
  <buildtool_depend>ament_python</buildtool_depend>
  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
